# demostack

./: .dev.env  .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
alembic/versions/: 0672759c3200_empty_comment.py  4feaa5853a63_empty_comment.py  5d96898673d9_models.py
app/: main.py
app/alembic/: env.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: file.py  home.py  task.py  utils.py
app/core/: config.py
app/crud/: __init__.py  crud_task.py
app/db/: session.py
app/models/: __init__.py  file.py  item.py  task.py  user.py
app/schemas/: __init__.py  file.py  task.py
app/static/: style.css
app/templates/: home.html
