[tool.poetry]
name = "demostack"
version = "0.1.0"
description = "Docker image with Uvicorn managed by Gunicorn for FastAPI web APIs in python 3.9 with linux."
authors = ["coleyon <24493192+coleyon@users.noreply.github.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8 || ^3.9"
SQLAlchemy = "^1.4.22"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
alembic = "^1.6.5"
mysql-connector-python = "^8.0.26"
pandas = "^1.3.0"
gunicorn = "^20.1.0"
requests = "^2.26.0"
email-validator = "^1.1.3"
emails = "^0.6"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.5"
tenacity = "^8.0.1"
fastapi = {extras = ["all"], version = "^0.67.0"}
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
autoflake = "^1.4"
isort = "^5.9.2"
pytest = "^6.2.4"
black = "^21.7b0"
pytest-cov = "^2.12.1"
flake8 = "^3.9.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
